Prevent scroll overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,8 @@ body {
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+
+    overflow: hidden;
 }
 
 #container {
